fix overflow

--- a/src/scss/sections/_advantages.scss
+++ b/src/scss/sections/_advantages.scss
@@ -1,6 +1,7 @@
 .advantages {
 	background-color: $bg;
 	padding: 51px 0 58px;
+	overflow: hidden;
 
 	&__body {
 		display: flex;
